# wxWidgets-the-tutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
simple_tutorials/Calculator_App/: CMakeLists.txt  main.cpp  main.h
simple_tutorials/Morse_Code_Translator_App/: CMakeLists.txt  main.cpp  main.h
widgets/ButtonWidget/: CMakeLists.txt  main.cpp
widgets/LabelWidget/: CMakeLists.txt  main.cpp
widgets/PanelAndSizerWidgets/: CMakeLists.txt  main.cpp
widgets/PanelWidget/: CMakeLists.txt  main.cpp
widgets/TextCtrlWidget/: CMakeLists.txt  main.cpp
widgets/TextEntryWidget/: CMakeLists.txt  main.cpp
